rust_writer_proc/tests/ui/local_finder_fails_if_not_applied_to_struct.stderr
error: expected `struct`
 --> tests/ui/local_finder_fails_if_not_applied_to_struct.rs:6:1
  |
6 | enum SomeStruct {
  | ^^^^
